php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #78999 Cycle leak when using function result as temporary
Submitted: 2019-12-19 11:34 UTC Modified: 2019-12-19 11:41 UTC
From: nikic@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 7.4Git-2019-12-19 (Git) OS:
Private report: No CVE-ID: None
 [2019-12-19 11:34 UTC] nikic@php.net
Description:
------------
We destroy temporaries using zval_ptr_dtor_nogc, so the root is not registered.

Test script:
---------------
<?php
function get() {
    $t = new stdClass;
    $t->prop = $t;
    return $t;
}
var_dump(get());



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2019-12-19 11:41 UTC] dmitry@php.net
-Assigned To: +Assigned To: dmitry
 [2019-12-19 20:19 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=eb846939b1ecc45fbc4898f4234fea128e8f9551
Log: Fixed bug #78999 (Cycle leak when using function result as temporary)
 [2019-12-19 20:19 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 13:00:02 2026 UTC