Fixed bug #78999 (Cycle leak when using function result as temporary)